--- a/front/src/styles/scss/App.scss
+++ b/front/src/styles/scss/App.scss
@@ -113,6 +113,7 @@ $md4: 479.98;
 		position: relative;
 
 		@media (max-width: 650px) {
+			min-height: 170px;
 			flex: 0 1 12%;
 			gap: 0;
 		}
@@ -157,7 +158,7 @@ $md4: 479.98;
 		}
 
 		&-hidden {
-			transform: translateX(-100%);
+			transform: translateX(-200%);
 		}
 
 		&-not {
@@ -831,10 +832,11 @@ $md4: 479.98;
 //====================================================================================================
 
 .login {
-	flex: 0 1 50%;
+	flex: 0 0 50%;
+	min-height: 100%;
 	background: #8babd86e;
 	margin: 0 auto;
-	padding: 15% 10% 0 10%;
+	padding: 20% 10% 0 10%;
 	font-family: "Roboto" !important;
 
 	&__welcome {
